# non_panicked_character

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
non_panicked_character/: npc.py
tests/: test_npc.py
